--- a/content/post/2015-07-23-r-rmarkdown.Rmd
+++ b/content/post/2015-07-23-r-rmarkdown.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Hello R Markdown"
+title: "Setup Your Github Repository(for windows)"
 author: "admin"
-date: 2015-07-23T21:13:14-05:00
+date: 2020-02-24
 categories: ["R"]
 tags: ["R Markdown", "plot", "regression"]
 ---
